<?xml version="1.0"?>
<package format="3">
  <name>arm_commander</name>
  <version>0.1.0</version>
  <description>The arm_commander package</description>

  <!-- Maintained by: -->
  <maintainer email="robotics.ref@qut.edu.au">Andrew Lui and Dasun Gunasinghe</maintainer>

  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>BSD</license>

  <!-- Build Tool Requirements -->
  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>

  <!-- ROS version handling -->
  <depend>rclpy</depend>
  <depend>rclcpp</depend>

  <!-- Requied Messages -->
  <exec_depend>action_msgs</exec_depend>
  <exec_depend>control_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>moveit_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>shape_msgs</exec_depend>
  <exec_depend>std_srvs</exec_depend>
  <exec_depend>trajectory_msgs</exec_depend>

  <!-- Tests -->
  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <!-- Build Tools -->
  <!-- <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend> -->

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Needed for ROS 2 -->
    <build_type>ament_cmake</build_type>
  </export>
</package>
